--- a/Teleopti.Analytics/Teleopti.Analytics.Etl.ServiceLogic/Teleopti.Analytics.Etl.ServiceLogic.csproj
+++ b/Teleopti.Analytics/Teleopti.Analytics.Etl.ServiceLogic/Teleopti.Analytics.Etl.ServiceLogic.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>Teleopti.Analytics.Etl.ServiceLogic</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <TargetFrameworkProfile />
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
