--- a/AgentPortal/Teleopti.Ccc.AgentPortal/Teleopti.Ccc.AgentPortal.csproj
+++ b/AgentPortal/Teleopti.Ccc.AgentPortal/Teleopti.Ccc.AgentPortal.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>Teleopti.Ccc.AgentPortal</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Teleopti.Ccc.snk</AssemblyOriginatorKeyFile>
     <NoWin32Manifest>true</NoWin32Manifest>
