--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Pm/Teleopti.Analytics.Pm.PmServiceHost/Teleopti.Analytics.PM.PMServiceHost.csproj
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Pm/Teleopti.Analytics.Pm.PmServiceHost/Teleopti.Analytics.PM.PMServiceHost.csproj
@@ -12,10 +12,14 @@
     <RootNamespace>Teleopti.Analytics.PM.PMServiceHost</RootNamespace>
     <AssemblyName>Teleopti.Analytics.PM.PMServiceHost</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Teleopti.Ccc.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
