--- a/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.csproj
+++ b/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager/Teleopti.Ccc.DBManager.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>DBManager</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <ManifestCertificateThumbprint>57F54CEBF5302376792A510E275B5FDE4E7E2495</ManifestCertificateThumbprint>
     <ManifestKeyFile>Teleopti.Ccc.DBManager_TemporaryKey.pfx</ManifestKeyFile>
     <GenerateManifests>false</GenerateManifests>
