--- a/Teleopti.Ccc.LanguageManager/Teleopti.Ccc.LanguageManager.csproj
+++ b/Teleopti.Ccc.LanguageManager/Teleopti.Ccc.LanguageManager.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>Teleopti.Ccc.LanguageManager</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <StartupObject>Teleopti.Ccc.LanguageManager.Program</StartupObject>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Teleopti.Ccc.snk</AssemblyOriginatorKeyFile>
