--- a/Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.LogClientProxy/Teleopti.Ccc.Rta.LogClientProxy.csproj
+++ b/Teleopti.Ccc.Rta/Teleopti.Ccc.Rta.LogClientProxy/Teleopti.Ccc.Rta.LogClientProxy.csproj
@@ -16,10 +16,14 @@
     </StartupObject>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Teleopti.Ccc.snk</AssemblyOriginatorKeyFile>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
