--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Common.UI.OutlookControls/Teleopti.Common.UI.OutlookControls.csproj
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Common.UI.OutlookControls/Teleopti.Common.UI.OutlookControls.csproj
@@ -10,10 +10,14 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Teleopti.Common.UI.OutlookControls</RootNamespace>
     <AssemblyName>Teleopti.Common.UI.OutlookControls</AssemblyName>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
