--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Common.UI.SmartPartControls/Teleopti.Common.UI.SmartPartControls.csproj
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Common.UI.SmartPartControls/Teleopti.Common.UI.SmartPartControls.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>Teleopti.Common.UI.SmartPartControls</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\Teleopti.Ccc.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
