--- a/Teleopti.Ccc.Web.Broker/Teleopti.Ccc.Web.Broker.csproj
+++ b/Teleopti.Ccc.Web.Broker/Teleopti.Ccc.Web.Broker.csproj
@@ -14,10 +14,14 @@
     <AssemblyName>Teleopti.Ccc.Web.Broker</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <TargetFrameworkProfile />
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\RaptorRoger2\</SolutionDir>
     <RestorePackages>true</RestorePackages>
