--- a/Teleopti.Messaging/Teleopti.Messaging.Management/Teleopti.Messaging.Management.csproj
+++ b/Teleopti.Messaging/Teleopti.Messaging.Management/Teleopti.Messaging.Management.csproj
@@ -12,10 +12,14 @@
     <AssemblyName>Teleopti.Messaging.Management</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>SAK</SccProjectName>
-    <SccLocalPath>SAK</SccLocalPath>
-    <SccAuxPath>SAK</SccAuxPath>
-    <SccProvider>SAK</SccProvider>
+    <SccProjectName>
+    </SccProjectName>
+    <SccLocalPath>
+    </SccLocalPath>
+    <SccAuxPath>
+    </SccAuxPath>
+    <SccProvider>
+    </SccProvider>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>Teleopti.Messaging.Management.snk</AssemblyOriginatorKeyFile>
     <ApplicationIcon>Messages.ico</ApplicationIcon>
