fixing issues with path to nhib cache providers

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus.Host/Teleopti.Ccc.Sdk.ServiceBus.Host.csproj
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.ServiceBus.Host/Teleopti.Ccc.Sdk.ServiceBus.Host.csproj
@@ -316,7 +316,7 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)..\..\nhibernate\Cache_Providers\*.dll" "$(TargetDir)" /y
+    <PostBuildEvent>xcopy "$(ProjectDir)..\..\nhibernateAddons\Cache_Providers\*.dll" "$(TargetDir)" /y
 if not exist "$(TargetDir)Payroll" mkdir "$(TargetDir)Payroll"
 xcopy "$(ProjectDir)..\..\Teleopti.Ccc.Payroll\Teleopti.Ccc.Payroll\bin\$(ConfigurationName)\Teleopti.Ccc.Payroll.dll" "$(TargetDir)Payroll" /y</PostBuildEvent>
     <PreBuildEvent>
