--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/Teleopti.Ccc.SmartClientPortal.Shell.csproj
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/Teleopti.Ccc.SmartClientPortal.Shell.csproj
@@ -435,7 +435,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)..\..\nhibernate\Cache_Providers\*.dll" "$(TargetDir)" /y /r
+    <PostBuildEvent>xcopy "$(ProjectDir)..\..\nhibernateAddons\Cache_Providers\*.dll" "$(TargetDir)" /y /r
 xcopy "$(ProjectDir)..\..\Microsoft.ReportViewer*.dll" "$(TargetDir)" /y /r
 xcopy "$(ProjectDir)..\..\mbcache\linfu\*" "$(TargetDir)" /y /r</PostBuildEvent>
   </PropertyGroup>
