App.config junk

--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/App.config
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/App.config
@@ -135,10 +135,10 @@
 		</client>
 	</system.serviceModel>
 	<appSettings>
-		<add key="GetConfigFromWebService" value="true" />
-		<!--
-		<add key="nhibConfPath" value="C:\RaptorScrum\TeamRed-PBI-branch-3\Teleopti.Ccc.SmartClientPortal\Teleopti.Ccc.SmartClientPortal.Shell" />
-		Keep this uncomment. Raptor will search your application directory after nhib files-->
+		<add key="GetConfigFromWebService" value="false" />
+		
+		<add key="nhibConfPath" value="C:\nhib\" />
+		<!--Keep this uncomment. Raptor will search your application directory after nhib files-->
 
 		<add key="ClientSettingsProvider.ServiceUri" value="" />
 		<!--WISEMETA: value="[MATRIX_WEB_SITE_URL]"-->
