add optimization preferences dialog

--- a/Win/Teleopti.Ccc.Win.csproj
+++ b/Win/Teleopti.Ccc.Win.csproj
@@ -864,6 +864,36 @@
     <Compile Include="Meetings\Overview\MeetingsScheduleProvider.cs" />
     <Compile Include="Meetings\Overview\ScheduleAppointmentFromMeetingCreator.cs" />
     <Compile Include="Meetings\ViewType.cs" />
+    <Compile Include="Optimization\AdvancedPreferencesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Optimization\AdvancedPreferencesPanel.Designer.cs">
+      <DependentUpon>AdvancedPreferencesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Optimization\DayOffPreferencesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Optimization\DayOffPreferencesPanel.Designer.cs">
+      <DependentUpon>DayOffPreferencesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Optimization\ExtraPreferencesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Optimization\ExtraPreferencesPanel.Designer.cs">
+      <DependentUpon>ExtraPreferencesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Optimization\GeneralPreferencesPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Optimization\GeneralPreferencesPanel.Designer.cs">
+      <DependentUpon>GeneralPreferencesPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Optimization\OptimizationPreferencesDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Optimization\OptimizationPreferencesDialog.Designer.cs">
+      <DependentUpon>OptimizationPreferencesDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Payroll\DefinitionSets\MultiplicatorDefinitionView.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -2556,6 +2586,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Meetings\Overview\MeetingOverviewView.resx">
       <DependentUpon>MeetingOverviewView.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Optimization\AdvancedPreferencesPanel.resx">
+      <DependentUpon>AdvancedPreferencesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Optimization\DayOffPreferencesPanel.resx">
+      <DependentUpon>DayOffPreferencesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Optimization\ExtraPreferencesPanel.resx">
+      <DependentUpon>ExtraPreferencesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Optimization\GeneralPreferencesPanel.resx">
+      <DependentUpon>GeneralPreferencesPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Optimization\OptimizationPreferencesDialog.resx">
+      <DependentUpon>OptimizationPreferencesDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Payroll\Forms\PayrollExportPages\PersonsSelectionView.resx">
       <DependentUpon>PersonsSelectionView.cs</DependentUpon>
