--- a/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
+++ b/InfrastructureTest/Teleopti.Ccc.InfrastructureTest.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Foundation\AvailableWindowsDataSourcesTest.cs" />
     <Compile Include="Foundation\ConstraintViolationExceptionTest.cs" />
     <Compile Include="Foundation\CannotConnectToDatabaseExceptionTest.cs" />
+    <Compile Include="Foundation\PurgeApplicationDataTest.cs" />
     <Compile Include="Foundation\ExplicitlySetGenericPrincipalDataSourceException.cs" />
     <Compile Include="Foundation\ForeignKeyExceptionTest.cs" />
     <Compile Include="Foundation\RoleToPrincipalCommandTest.cs" />
