fixing some of the syncronization of reports from matrix

--- a/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Web.config
+++ b/Teleopti.Ccc.Sdk/Teleopti.Ccc.Sdk.Host/Web.config
@@ -70,7 +70,7 @@
 	  <!--<add key="MatrixWebSiteUrl" value="http://localhost/Analytics"/>-->
 	  <add key="MatrixWebSiteUrl" value="http://localhost:1335" />
 	  <!--WISEMETA: value="[SQL_AUTH_STRING];Application Name=Teleopti.Ccc.Sdk.Host;Initial Catalog=[DB_MESSAGING]"-->
-    <add key="MessageBroker" value="Data Source=.;Initial Catalog=Root-7.1.349_Demoreg_TeleoptiAnalytics;Persist Security Info=True;User ID=sa;Password=cadadi" />
+    <add key="MessageBroker" value="Data Source=.;Initial Catalog=OlaHg_Demoreg_TeleoptiAnalytics;Persist Security Info=True;User ID=sa;Password=cadadi" />
     <!--<add key="MessageBroker" value="Data Source=.;Initial Catalog=TeleoptiAnalytics;Persist Security Info=True;User ID=sa;Password=cadadi" />-->
     <!--<add key="MessageBroker" value="Data Source=TELEOPTI546;User Id=sa;Password=cadadi;Initial Catalog=Demoreg_TeleoptiAnalytics;Application name=Teleopti.MessageBroker"/>-->
 		<add key="SharedKey" value="UUhPdWVyM0xNMVJlVDFzRi84Y25KR3dueU9mOUdoYXI=" />
