source control no longer track app.config in desktop app (probably make the same changes in other clients as well)

--- a/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/Teleopti.Ccc.SmartClientPortal.Shell.csproj
+++ b/Teleopti.Ccc.SmartClientPortal/Teleopti.Ccc.SmartClientPortal.Shell/Teleopti.Ccc.SmartClientPortal.Shell.csproj
@@ -440,4 +440,7 @@ xcopy "$(ProjectDir)..\..\Microsoft.ReportViewer*.dll" "$(TargetDir)" /y /r
 xcopy "$(ProjectDir)..\..\mbcache\linfu\*" "$(TargetDir)" /y /r</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>if not exist "$(ProjectDir)app.config" copy "$(ProjectDir)..\..\BuildArtifacts\app.config" "$(ProjectDir)app.config"</PreBuildEvent>
+  </PropertyGroup>
 </Project>
