fix compilation in domain/optimization

--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Optimization\BlockDayOffOptimizerContainer.cs" />
     <Compile Include="Optimization\BlockDayOffOptimizationService.cs" />
     <Compile Include="Optimization\BlockOptimizerBlockCleaner.cs" />
+    <Compile Include="Optimization\DayOffPlannerRuleSetCreator.cs" />
     <Compile Include="Optimization\ExtendReduceDaysoffOptimizer.cs" />
     <Compile Include="Optimization\ExtendReduceDaysoffOptimizerService.cs" />
     <Compile Include="Optimization\ExtendReduceTimeOptimizer.cs" />
@@ -298,6 +299,7 @@
     <Compile Include="Optimization\RuleSetBagsOfGroupOfPeopleCanHaveShortBreakLoader.cs" />
     <Compile Include="Optimization\ScheduleResultDataExtractorProvider.cs" />
     <Compile Include="Optimization\ScheduleDayEquator.cs" />
+    <Compile Include="Optimization\SchedulingOptionsSyncronizer.cs" />
     <Compile Include="Optimization\TeleoptiPeriodValueCalculator.cs" />
     <Compile Include="Optimization\WorkRuleSetExtractorForGroupOfPeople.cs" />
     <Compile Include="Optimization\ITimePeriodCanHaveShortBreak.cs" />
