--- a/Domain/Teleopti.Ccc.Domain.csproj
+++ b/Domain/Teleopti.Ccc.Domain.csproj
@@ -378,6 +378,7 @@
     <Compile Include="ResourceCalculation\SwapAndModifyServiceNew.cs" />
     <Compile Include="ResourceCalculation\SwapServiceNew.cs" />
     <Compile Include="Scheduling\AffectsSameDayAndPersonSpecification.cs" />
+    <Compile Include="Scheduling\Assignment\HasDayOffUnderFullDayAbsence.cs" />
     <Compile Include="Scheduling\Assignment\PeriodOffsetCalculator.cs" />
     <Compile Include="Scheduling\Assignment\ProjectionIntersectingPeriodMerger.cs" />
     <Compile Include="Scheduling\Assignment\ProjectionMerger.cs" />
