--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
@@ -388,6 +388,7 @@
     <EmbeddedResource Include="Reports\Ccc\report_team_metrics.rdlc" />
     <Content Include="Reports\Custom\PrognosMotSchemalagt.rdlc">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
