--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal/Teleopti.Analytics.Portal.csproj
@@ -386,13 +386,10 @@
     <EmbeddedResource Include="Reports\Ccc\report_shift_category_per_day.rdlc" />
     <EmbeddedResource Include="Reports\Ccc\report_scheduled_time_per_agent.rdlc" />
     <EmbeddedResource Include="Reports\Ccc\report_team_metrics.rdlc" />
-    <Content Include="Reports\Custom\PrognosMotSchemalagt.rdlc">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Reports\Custom\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
