Adding more build stuff to HgIgnore

--- a/.hgignore
+++ b/.hgignore
@@ -48,3 +48,6 @@ packages/
 *.chk
 *.nhib.xml
 *.ncov
+*Test.xml
+symbolmodule.xml
+Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.Config
