--- a/.hgignore
+++ b/.hgignore
@@ -52,3 +52,4 @@ packages/
 symbolmodule.xml
 Teleopti.Ccc.Web/Teleopti.Ccc.WebBehaviorTest/Teleopti.Ccc.WebBehaviorTest.dll.Config
 *[Tt]est.dll.[Cc]onfig
+*.ncov.bkp
