--- a/Teleopti.Ccc.UserTexts/Teleopti.Ccc.UserTexts.csproj
+++ b/Teleopti.Ccc.UserTexts/Teleopti.Ccc.UserTexts.csproj
@@ -191,6 +191,7 @@
     <EmbeddedResource Include="Resources.es.resx" />
     <EmbeddedResource Include="Resources.fi.resx" />
     <EmbeddedResource Include="Resources.fr.resx" />
+    <EmbeddedResource Include="Resources.id.resx" />
     <EmbeddedResource Include="Resources.no.resx" />
     <EmbeddedResource Include="Resources.pt.resx" />
     <EmbeddedResource Include="Resources.ru.resx" />
